# Flash-attention

./: .gitignore  LICENSE  Makefile  README.md
benchmarks/: bench_all.py  plot_results.py
cuda/: CMakeLists.txt  setup.py
cuda/include/: cuda_utils.cuh  flash_attn.cuh  online_softmax.cuh  smem_utils.cuh
cuda/src/: flash_attn_bwd.cu  flash_attn_fwd.cu  naive_attention.cu  torch_bindings.cpp
cuda/tests/: test_correctness.py  test_edge_cases.py
docs/: polycope.md  writeup.md
triton/: bench_triton.py  flash_attn_triton.py  test_triton.py
